--- a/index.HTML
+++ b/index.HTML
@@ -5,46 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Calculator</title>
     <style>
-        .calculator {
-    width: 400px;
-    margin: 0 auto;
-    background-color: #00f;
-    border-radius: 5px;
-    padding: 10px;
-}
+          .calculator {
+          width: 400px;
+          margin: 0 auto;
+          background-color: #00f;
+          border-radius: 5px;
+          padding: 10px;
+          }
 
-.display {
-    width: 95%;
-    height: 50px;
-    font-size: 24px;
-    text-align: right;
-    border: none;
-    padding: 0 10px;
-}
+          .display {
+              width: 95%;
+              height: 50px;
+              font-size: 24px;
+              text-align: right;
+              border: none;
+              padding: 0 10px;
+          }
 
-.buttons {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 5px;
-}
+          .buttons {
+              display: grid;
+              grid-template-columns: repeat(4, 1fr);
+              gap: 5px;
+          }
 
-button {
-    width: 100%;
-    height: 50px;
-    font-size: 18px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    cursor: pointer;
-}
+          button {
+              width: 100%;
+              height: 50px;
+              font-size: 18px;
+              border: 1px solid #ccc;
+              border-radius: 3px;
+              cursor: pointer;
+          }
 
-button:hover {
-    background-color: #0000ff‎;
-}
+          button:hover {
+              background-color: #0000ff;
+          }
     </style>
 </head>
 <body>
      
-<h1 align="center"><i>Welcome to the calculator</i></h1>
+<h1  style=" text-align: center"><i>Welcome to the calculator</i></h1>
     <div class="calculator">
         <input type="text" class="display" id="result" readonly>
         <div class="buttons">
@@ -66,7 +66,6 @@ button:hover {
             <button onclick="display('+')">+</button>
         </div>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
 <script>
@@ -84,7 +83,7 @@ function calculate() {
     var result = eval(expression);
     document.getElementById("result").value = result;
   } catch(err) {
-    document.getElementById("result").value = "Error";
+    document.getElementById("result").value = "Error please refresh and try again";
   }
 }
 </script>
