--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
           button:hover {
               background-color: #0000ff;
           }
+          .buttonC{
+            background-color: #cf7c00;
+          }
     </style>
 </head>
 <body>
@@ -59,7 +62,7 @@
             <button onclick="display('2')">2</button>
             <button onclick="display('3')">3</button>
             <button onclick="display('-')">-</button>
-            <button onclick="clearScreen()">C</button>
+            <button class="buttonC" onclick="clearScreen()">C</button>
             <button onclick="display('0')">0</button>
             <button onclick="calculate()">=</button>
             <button onclick="display('+')">+</button>
