--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
               border-radius: 3px;
               cursor: pointer;
           }
-
           button:hover {
               background-color: #0000ff;
           }
@@ -46,7 +45,7 @@
 </head>
 <body>
      
-<h1  style=" text-align: center"><i>Welcome to the calculator</i></h1>
+<h1  style=" text-align: center"><i>Welcome to my calculator</i></h1>
     <div class="calculator">
         <input type="text" class="display" id="result" readonly>
         <div class="buttons">
